# CASPER

./: .gitignore  README.md  api.py  background.fasta  config.ini  feature_importances_balanced_constrained_no_standardize.csv  feature_importances_logreg_l1_no_standardize.csv  filtered_sequences.csv  filteredscoring.py  lebron.py  main.py  pairs.csv  pairs_features.csv  pairs_features2.csv  pairs_scored.csv  plsworkipray.py  prediction.py  pyproject.toml  requirements.txt  scored_pair.csv  scoring.py  scoringlebron.py  target.fasta  testing.ipynb  v2.py  val_with_features.csv  w.json
backend/: config.ini  feature_importances_balanced_no_standardize.csv  features.py  featuresval.csv  modelforweights.py  test.fasta
backend/src/: features.py  featuresforval.py  main.py  validation.csv  weight_val.csv  weightscalculation.py
backend/src/ranking/: rankingtwo.py
backend/src/utils/: tgtinputhandler.py
casper/ranking/: ranker.py
casper/set_generation/: Pair.py  base_filters.py  base_set_generator.py
casper/utils/: casper_logger.py  sequence_handler.py  target_input_handler.py
casper/validation/: validation_all_features_calc.py
frontend/src/: AssayDesignerPage.tsx
mashallah/: plsworkipray.py
src/: all_sequences.csv  features.py  filtering.py  main.py  orderedsequences.py  pairgen.py  primergen.py
src/ranking/: .gitkeep  ranking.py  rankingtwo.py
src/util/: tgtinputhandler.py
src/utils/: tgtinputhandler.py
webapp/frontend/: index.html
webapp/frontend/src/: assay.css  home.css
